# passbay

./: Cargo.toml  LICENSE  README.md
api/: .env.example  Cargo.toml  README.md  Rocket.toml
api/migrations/: 20230828194750_passwords.up.sql
api/migrations/2022-12-05-152153_create_users/: up.sql
api/src/: database.rs  errors.rs  main.rs  models.rs  utils.rs
api/src/routes/: index.rs  passwords.rs
cli/: Cargo.toml  README.md
cli/src/: api.rs  command.rs  main.rs
cli/src/commands/: echo.rs  login.rs  mod.rs
