[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["json", "secrets"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
argon2 = "0.4.1"
rand_core = { version = "0.6.4", features = ["std"] }
