[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
poem = { version = "1.3.57", features = ["session"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "mysql"] }
dotenvy = "0.15.7"
log = "0.4.20"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.26"
serde = "1.0.188"
serde_json = "1.0.105"
thiserror = "1.0.47"
